# aie-course

./: README.md  main.py  pyproject.toml
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/reports_example/: report.md
homeworks/HW03/eda-cli/reports_example/top_categories/: top_values_country.csv
homeworks/HW03/eda-cli/src/eda_cli/: core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
practices/: S01-demo.ipynb  S02-demo-01-pandas-tables (1).ipynb  S02-demo-02-matplotlib-basics.ipynb
